// Copyright (C) 2018 Midokura SARL.
// All rights reserved.
//
//    Licensed under the Apache License, Version 2.0 (the "License"); you may
//    not use this file except in compliance with the License. You may obtain
//    a copy of the License at
//
//         http://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
//    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
//    License for the specific language governing permissions and limitations
//    under the License.

syntax = "proto3";

package nodeapi;

service MidoNetKubeNode {
	rpc AddPodAnnotation (AddPodAnnotationRequest) returns (AddPodAnnotationReply) {}
}

message AddPodAnnotationRequest {
	string namespace = 1;
	string name = 2;
	string key = 3;
	string value = 4;
}

message AddPodAnnotationReply {
	string error = 1;
}
